Fixed footer overlapping with sec5

--- a/src/index.css
+++ b/src/index.css
@@ -603,7 +603,9 @@ nav img{
 }
 
 footer{
+    position: relative;
     width: 100%;
     height: 35.9vh;
     background-color: #F28824;
+    top: 20vh;
 }
